--- a/nuxt-vuetify-pug-ts/package.json
+++ b/nuxt-vuetify-pug-ts/package.json
@@ -20,6 +20,7 @@
     "vuex-class": "^0.3.1"
   },
   "devDependencies": {
+    "@mdi/font": "^3.3.92",
     "@types/node": "^10.12.18",
     "nodemon": "^1.11.0",
     "nuxt-typescript": "^0.11.0",
