--- a/.gitignore
+++ b/.gitignore
@@ -38,5 +38,6 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
-.code/
+.vscode/
 .idea/
+yarn.lock
