--- a/nuxt-vuetify-pug-ts/.gitignore
+++ b/nuxt-vuetify-pug-ts/.gitignore
@@ -3,6 +3,8 @@ logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+yarn.lock
+package-lock.json
 pids
 *.pid
 *.seed
@@ -30,5 +32,6 @@ dist
 .vuepress/dist
 .serverless
 .idea/
-.nuxt/
 .vscode/
+.proto/com/
+.proto/*.json
