--- a/nuxt-vuetify-pug-ts/package.json
+++ b/nuxt-vuetify-pug-ts/package.json
@@ -1,34 +1,59 @@
 {
   "name": "nuxt-vuetify-pug-ts",
   "version": "1.0.0",
-  "description": "template for nuxt vuetify pug and TS",
+  "title": "nuxt-vuetify-pug-ts",
+  "description": "",
   "author": "Zen.Liu",
   "private": true,
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
+    "prod": "nuxt build -c nuxt.config.prod.js",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "analyze": "nuxt build -a",
+    "generate": "nuxt generate",
+    "pbjs": "pbjs -t static-module -w es6 -o model/proto.js ./.proto/proto.proto",
+    "pbts": "pbts -o model/proto.d.ts model/proto.js"
   },
   "dependencies": {
-    "@mdi/font": "^3.3.92",
     "@nuxtjs/axios": "^5.0.0",
-    "cross-env": "^5.2.0",
-    "nuxt": "^2.0.0",
+    "@nuxtjs/moment": "^1.2.0",
+    "babel-plugin-lodash": "^3.3.4",
+    "crypto-js": "^3.1.9-1",
+    "dexie": "^2.0.4",
+    "jsencrypt": "^3.0.0-rc.1",
+    "lodash": "^4.17.11",
+    "lodash-webpack-plugin": "^0.11.5",
+    "moment": "^2.23.0",
+    "nuxt": "^2.5.0",
     "nuxt-class-component": "^1.2.1",
     "nuxt-property-decorator": "^1.3.1",
+    "paper": "^0.12.0",
+    "pug": "^2.0.3",
+    "stylus": "^0.54.5",
+    "typescript": "^3.2.2",
+    "vee-validate": "^2.1.5",
+    "viewerjs": "^1.3.1",
     "vuetify": "^1.2.4",
-    "vuex-class": "^0.3.1"
+    "vuex-class": "^0.3.1",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
+    "@mdi/svg": "^3.5.95",
+    "@nuxt/babel-preset-app": "^2.4.5",
+    "@nuxt/typescript": "^2.5.1",
+    "@types/crypto-js": "^3.1.43",
+    "@types/lodash": "^4.14.119",
     "@types/node": "^10.12.18",
+    "@types/paper": "^0.11.10",
+    "cross-env": "^5.2.0",
     "nodemon": "^1.11.0",
-    "nuxt-typescript": "^0.11.0",
-    "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
-    "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "ts-loader": "^5.3.2",
-    "typescript": "^3.2.2"
+    "ts-protoc-gen": "^0.9.0",
+    "vue-svg-loader": "^0.12.0",
+    "vue-template-compiler": "^2.6.8",
+    "vuetify-loader": "^1.2.1"
   }
 }
