--- a/nuxt-vuetify-pug-ts/tsconfig.json
+++ b/nuxt-vuetify-pug-ts/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": ["dom", "es2015"],
+    "lib": [
+      "dom",
+      "es2015",
+      "dom"
+    ],
     "module": "es2015",
     "moduleResolution": "node",
     "experimentalDecorators": true,
@@ -11,10 +15,28 @@
     "removeComments": true,
     "suppressImplicitAnyIndexErrors": true,
     "allowSyntheticDefaultImports": true,
-    "allowJs": true,
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./*"]
-    }
-  }
+      "~/*": [
+        "./*"
+      ],
+      "@/*": [
+        "./*"
+      ]
+    },
+    "esModuleInterop": true,
+    "allowJs": true,
+    "sourceMap": true,
+    "strict": true,
+    "noEmit": true,
+    "types": [
+      "@types/node",
+      "@nuxt/vue-app"
+    ]
+  },
+  "exclude": [
+    "node_modules",
+    "dist",
+    ".nuxt"
+  ]
 }
